# delyrics

./: LICENSE  README.md  delyrics.py  pyproject.toml
